--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,13 @@ dependencies:
   flutter_svg: ^1.1.6
   font_awesome_flutter: ^10.4.0
   sensors_plus: ^2.0.2
+  sliding_up_panel: ^2.0.0+1
+  percent_indicator: ^3.0.1
+  location: ^4.3.0
+  geolocator: ^9.0.2
+  fluttertoast: ^8.2.1
+  flutter_barometer_plugin: ^0.0.1+3
+  proximity_sensor: ^1.0.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -73,6 +80,9 @@ flutter:
     - assets/images/right_arrow_icon.svg
     - assets/images/hollow_circle_icon.svg
     - assets/images/solid_circle_icon.svg
+    - assets/images/home/
+    - assets/icons/home/
+    - assets/icons/workouts/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
