--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,7 @@ dependencies:
   fluttertoast: ^8.2.1
   flutter_barometer_plugin: ^0.0.1+3
   proximity_sensor: ^1.0.4
-
+  shared_preferences: ^2.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -72,7 +72,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/light_mode_logo.png
+    - assets/images/
     - assets/images/dark_mode_logo.png
     - assets/images/onboarding_logo.png
     - assets/images/login_dark_mode_logo.png
