new features (heart beats) & fixing & style

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,10 @@ dependencies:
   flutter_barometer_plugin: ^0.0.1+3
   proximity_sensor: ^1.0.4
   shared_preferences: ^2.1.0
+  flutter_charts: ^0.5.1
+  wakelock: ^0.6.2
+  camera: ^0.10.3+2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
