almost finished app

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,12 @@
 {
     "cSpell.words": [
         "ColorsManage",
-        "geolocator"
+        "geolocator",
+        "hectpascal",
+        "Jeor",
+        "Mifflin",
+        "TDEE",
+        "untoggle",
+        "wakelock"
     ]
 }
